--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,25 @@
 <div class="container">
 	<div class="row">
+		<!-- Image && App Name -->
 		<div class="col-xs-12 text-center" id="top-bar">
-			<img src="/assets/images/burger.png" alt="burger" />
-			<h1> Eat-Da-Burger! </h1>
+			<img src="/assets/img/burger.jpg" alt="burger" />
+			<h1> Burger Muncher! </h1>
 		</div>
-		<div class="col-xs-6 text-center" class="task">
+
+		<!-- Submit -->
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 text-center enter_section">
+					<form class="navbar-form navbar-center" action="/burgers/create" method="POST">
+						<input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+						<button type="submit" class="btn btn-primary" id="text-enter-button">Order!</button>
+					</form>
+					<p>Enter a burger you want to eat then click the "Order" button.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-xs-8 text-center" class="task">
 			<div class="row">
 			  {{#each burger_data}}
 			  	{{#unless this.devoured}}
@@ -16,31 +31,28 @@
 				<div class="col-xs-3 text-center">
 					<form method="POST" action="/burgers/update?_method=PUT" class="button-size">
 						<input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
-						<button type="submit" class="btn btn-default">Devour it!</button>
+						<button type="submit" class="btn btn-default">Munch!</button>
 					</form>
 				</div>
 				{{/unless}}
 			  {{/each}}
 			</div>
 		</div>
-		<div class="col-xs-6 text-center" class="task">
+
+		<div class="col-xs-4 text-center" class="task">
 			  {{#each burger_data}}
 			  	{{#if this.devoured}}
+
 			  		<input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
+
 				{{/if}}
 			  {{/each}}
 		</div>
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12 text-center enter_section">
-			<form action="/burgers/create" method="POST">
-				<input type="text" class="form-control" name="burger_name" value="" id="enter_text">
-				<button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
-			</form>
-			<p>Enter a burger you want to eat Click the "Submit" button.</p>
-		</div>
-	</div>
-</div>
+
+
+
+
+
